# spark-delta-iceberg

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
docs/: index.md
docs-iceberg/: index.md
docs-iceberg/airbnb-dataset/: operations.md
docs-iceberg/setup/: environment.md
docs/airbnb-dataset/: data_structure.md  operations.md  overview.md
docs/delta/: operations.md  overview.md
docs/iceberg/: operations.md  overview.md
docs/notebooks/spark-delta-lake/: spark-delta-lake.ipynb
docs/notebooks/spark-delta-lake/spark-warehouse/carro_delta/: .part-00000-0b318dd8-26cf-4ae4-b1fb-7bab1f5d8fd7-c000.snappy.parquet.crc  .part-00000-5c7e28ec-7153-44f0-bf7e-02ee17118ec8-c000.snappy.parquet.crc  .part-00000-6894bbf1-3947-4c6e-a955-f031ca1d43d0-c000.snappy.parquet.crc  .part-00000-df73c358-81f0-49cf-92e6-a1c609c430b1-c000.snappy.parquet.crc  .part-00000-ee76b889-b635-4604-a1f1-c0488f4a290a-c000.snappy.parquet.crc  .part-00001-ba84aa86-0b33-4593-a00e-744259335771-c000.snappy.parquet.crc  .part-00002-57db6eff-df35-46d6-a8bf-f7b211bbb081-c000.snappy.parquet.crc  part-00000-0b318dd8-26cf-4ae4-b1fb-7bab1f5d8fd7-c000.snappy.parquet  part-00000-5c7e28ec-7153-44f0-bf7e-02ee17118ec8-c000.snappy.parquet  part-00000-6894bbf1-3947-4c6e-a955-f031ca1d43d0-c000.snappy.parquet  part-00000-df73c358-81f0-49cf-92e6-a1c609c430b1-c000.snappy.parquet  (+3 more)
docs/notebooks/spark-iceberg/: spark-iceberg.ipynb
docs/setup/: installation.md  troubleshooting.md
notebooks/spark-delta-lake/: spark-delta-lake.ipynb
notebooks/spark-iceberg/: spark-iceberg.ipynb
(+119 files in other folders)
